--- a/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
@@ -15,6 +15,9 @@ spring:
           - data-id: logging-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
+          - data-id: feign-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
 
 #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
